fixed text header alignment issue
turned off flex display value for h1

--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ cta-container
 cta-container left-items
 {   
     
-    display: flex;
+    
     flex-direction: column;
     border: 0px solid orange;
     justify-content: flex-start;
@@ -314,17 +314,8 @@ cta-container left-items
 cta-container left-items h1
 {   
     
-    display: flex;
-    flex-direction: column;
-    border: 0px solid orange;
-    justify-content: flex-start;
-    text-align: left;
-
-    align-items: center;
-  
-    color: var(--hero-texts-color);
-    margin-block-start: 0em;
-    margin-block-end: 0em;
+margin-left: 0px;
+padding:0%;
 }
 
 
